--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,26 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Per-MoviesDB</title>
+    <script>
+      (function (t, r, a, c, k) {
+        (c = ["track", "identify", "converted"]),
+          (t.o = t._init || {}),
+          c.map(function (n) {
+            return (t.o[n] =
+              t.o[n] ||
+              function () {
+                (t.o[n].q = t.o[n].q || []).push(arguments);
+              });
+          }),
+          (t._init = t.o),
+          (k = r.createElement("script")),
+          (k.type = "text/javascript"),
+          (k.async = true),
+          (k.src = "https://cdn.howuku.com/js/track.js"),
+          k.setAttribute("key", a),
+          r.getElementsByTagName("head")[0].appendChild(k);
+      })(window, document, "oA05VeLkBJnJ5BEMq3X2Kv");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
